<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_tab1_f1"
        android:orderInCategory="100"
        android:title="@string/menu_tab1_f1_title"
        android:icon="@drawable/action_bar_friends_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_tab1_f2_s1"
        android:orderInCategory="101"
        android:title="@string/menu_tab1_f1_s1_title"/>
    <item
        android:id="@+id/menu_tab1_f2_s2"
        android:orderInCategory="102"
        android:title="@string/menu_tab1_f1_s2_title"/>
    <item
        android:id="@+id/menu_tab1_f2_s3"
        android:orderInCategory="103"
        android:title="@string/menu_tab1_f1_s3_title"/>
    <item
        android:id="@+id/menu_tab1_f2_s4"
        android:orderInCategory="104"
        android:title="@string/menu_tab1_f1_s4_title"/>
</menu>