<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F2F2F2">
    <android.support.v7.widget.GridLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="274dp"
        app:orientation="horizontal"
        app:columnCount="4"
        app:rowCount="3"
        >
        <com.tacademy.samplekakao.SettingItemView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:img_src="@drawable/img_chat_profile_send_default"
            app:text_content="@string/tab3_fragment_text1"
            android:layout_margin="0.5dp"
            android:background="#FFFFFF"
            />
        <com.tacademy.samplekakao.SettingItemView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:img_src="@drawable/thm_more_function_item_itemstore_icon"
            app:text_content="@string/tab3_fragment_text2"
            android:layout_margin="0.5dp"
            android:background="#FFFFFF"
            />
        <com.tacademy.samplekakao.SettingItemView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:img_src="@drawable/thm_more_function_item_plusfriend_icon"
            app:text_content="@string/tab3_fragment_text3"
            android:layout_margin="0.5dp"
            android:background="#FFFFFF"
            />
        <com.tacademy.samplekakao.SettingItemView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:img_src="@drawable/thm_more_function_item_notice_icon"
            app:text_content="@string/tab3_fragment_text4"
            android:layout_margin="0.5dp"
            android:background="#FFFFFF"
            />
        <com.tacademy.samplekakao.SettingItemView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:img_src="@drawable/thm_more_function_item_kakaopay_icon"
            app:text_content="@string/tab3_fragment_text5"
            android:layout_margin="0.5dp"
            android:background="#FFFFFF"
            />
        <com.tacademy.samplekakao.SettingItemView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:img_src="@drawable/thm_more_function_item_giftshop_icon"
            app:text_content="@string/tab3_fragment_text6"
            android:layout_margin="0.5dp"
            android:background="#FFFFFF"
            />
        <com.tacademy.samplekakao.SettingItemView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:img_src="@drawable/thm_more_function_item_style_icon"
            app:text_content="@string/tab3_fragment_text7"
            android:layout_margin="0.5dp"
            android:background="#FFFFFF"
            />
        <com.tacademy.samplekakao.SettingItemView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:img_src="@drawable/thm_more_function_item_hotdeal_icon"
            app:text_content="@string/tab3_fragment_text8"
            android:layout_margin="0.5dp"
            android:background="#FFFFFF"
            />
        <com.tacademy.samplekakao.SettingItemView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:img_src="@drawable/thm_more_function_item_tv_icon"
            app:text_content="@string/tab3_fragment_text9"
            android:layout_margin="0.5dp"
            android:background="#FFFFFF"
            />
        <com.tacademy.samplekakao.SettingItemView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:img_src="@drawable/thm_more_function_item_pagestore_icon"
            app:text_content="@string/tab3_fragment_text10"
            android:layout_margin="0.5dp"
            android:background="#FFFFFF"
            />
        <com.tacademy.samplekakao.SettingItemView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:img_src="@drawable/thm_more_function_item_gamecenter_icon"
            app:text_content="@string/tab3_fragment_text11"
            android:layout_margin="0.5dp"
            android:background="#FFFFFF"
            />
        <com.tacademy.samplekakao.SettingItemView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0.5dp"
            android:background="#FFFFFF"
            />
    </android.support.v7.widget.GridLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8">
        <TextView
            android:id="@+id/text_kakaoapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:text="카카오앱"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="6dp"
            android:src="@drawable/more_see_all"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_kakaoapp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/more_app_story"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:gravity="center"
                    android:text="카카오스토리"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/more_app_music"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:gravity="center"
                    android:text="카카오뮤직"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/more_app_taxi"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:gravity="center"
                    android:text="카카오택시"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/more_app_cham"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:gravity="center"
                    android:text="챔피언"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/more_ad_image"/>
</LinearLayout>
